# screen-tool

./: AGENTS.md  CONTRIBUTING.md  EXTENSIONS.md  PERFORMANCE-REVIEW.md  README.md  README.zh-CN.md  RELEASING.md  electron-builder.json5  index.html  package-lock.json  package.json  screentool.rb  tailwind.config.cjs  vite.config.ts
.github/workflows/: homebrew-tap.yml  release.yml  winget-releaser.yml
docs/: LOCAL_FORK.md
electron/: appPaths.ts  electron-env.d.ts  hudOverlayBounds.test.ts  hudOverlayBounds.ts  i18n.test.ts  i18n.ts  main.ts  mediaServer.test.ts  preload.ts  updateConfig.test.ts  updateConfig.ts  updater.test.ts  updater.ts  windows.ts
electron/extensions/: extensionIpc.ts  extensionLoader.ts  extensionMarketplace.ts
electron/ipc/: constants.ts  types.ts
electron/ipc/captions/: generate.ts
electron/ipc/cursor/: bounds.ts  (+2 more)
electron/native/: ScreenCaptureKitRecorder.swift
electron/native/nvidia-cuda-compositor/: CMakeLists.txt  run-mp4-pipeline.mjs
electron/native/nvidia-cuda-compositor/src/: main.cu
scripts/: benchmark-export-queues.mjs  build-native-helpers.mjs  build-nvidia-cuda-compositor.mjs  build-windows-gpu-export.mjs  i18n-check.mjs  launch-screentool-cuda-auto.ps1  smoke-packaged-binaries.mjs
src/: App.tsx  designTokens.test.ts  index.css
src/contexts/: I18nContext.test.ts  I18nContext.tsx  ThemeContext.test.ts  ThemeContext.tsx
src/hooks/: useScreenRecorder.ts
src/i18n/: config.ts  localeMetadata.ts
src/lib/: customFonts.ts  localFileUrl.test.ts  localFileUrl.ts  recordingPerformance.test.ts  recordingPerformance.ts
(+188 files in other folders)
